--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ecommerce-fixathon</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>shop-eazy-ecommerce</title>
+    <meta name="description" content="Project Crafted by the Legends" />
+    <meta name="author" content="Legends" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Project Crafted by the Legends" />
+    <meta property="og:description" content="Project Crafted by the Legends " />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://assets.grok.com/users/6cf06acc-a275-4744-8ed6-d42a78999fac/generated/YJTQJw2WgmEmttmI/image.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  
   </head>
 
   <body>
