--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <meta name="description" content="Project Crafted by the Legends" />
     <meta name="author" content="Legends" />
 
-    <meta property="og:title" content="Project Crafted by the Legends" />
+    <meta property="og:title" content="ShopEazy by the Legends" />
     <meta property="og:description" content="Project Crafted by the Legends " />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://assets.grok.com/users/6cf06acc-a275-4744-8ed6-d42a78999fac/generated/YJTQJw2WgmEmttmI/image.jpg" />
-
-  
   </head>
 
   <body>
