--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="ShopEazy by the Legends" />
     <meta property="og:description" content="Project Crafted by the Legends " />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://assets.grok.com/users/6cf06acc-a275-4744-8ed6-d42a78999fac/generated/YJTQJw2WgmEmttmI/image.jpg" />
+    <meta property="og:image" content="https://as2.ftcdn.net/v2/jpg/11/55/28/05/1000_F_1155280578_6MVjYPGkzLPF7Y7X7QM1DMcCev2KAaD1.jpg" />
   </head>
 
   <body>
