--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Project Crafted by the Legends" />
     <meta name="author" content="Legends" />
 
-    <meta property="og:title" content="ShopEazy by the Legends" />
+    <meta property="og:title" content="ShopEazy" />
     <meta property="og:description" content="Project Crafted by the Legends " />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://as2.ftcdn.net/v2/jpg/11/55/28/05/1000_F_1155280578_6MVjYPGkzLPF7Y7X7QM1DMcCev2KAaD1.jpg" />
